# full-stack-repo

./: .env  .gitignore  .user.yml  README.md  dagster_cloud.yaml  docker-compose.override.yml  docker-compose.single.yml  docker-compose.yml  profiles.yml  pyproject.toml
backend/: celeryworker.dockerfile
backend/chalicelib_project/: README.md  app.py  config.py  format.py  pyproject.toml  requirements.txt
backend/chalicelib_project/.chalice/: config.json
backend/chalicelib_project/chalicelib/: __init__.py
backend/chalicelib_project/controllers/: hit_testing.py
backend/chalicelib_project/controllers/asst/: assistant.py  reply.py  sale.py  thread.py  utils.py
backend/chalicelib_project/controllers/asst/functions/: sale.py
backend/chalicelib_project/controllers/chat/: conversation.py  rewriter.py  utils.py
backend/chalicelib_project/controllers/qa/: __init__.py  reply.py  utils.py  views.py
backend/chalicelib_project/controllers/slack/: __init__.py  interactive.py  user_profile.py  views.py
backend/chalicelib_project/core/: models.py  openai.py  schemas.py
backend/chalicelib_project/core/helper/: encrypter.py
backend/chalicelib_project/core/index/: index.py
backend/chalicelib_project/core/index/vector_index/: vector_index.py
backend/chalicelib_project/extensions/: ext_database.py  ext_ttlcache.py
backend/chalicelib_project/libs/: helper.py  response.py
backend/chalicelib_project/models/: faq.py  text.py
backend/chalicelib_project/notebooks/: example.ipynb
backend/chalicelib_project/services/: retrieval_service.py  text_service.py  vector_service.py
backend/chalicelib_project/static/asst/files/: qa.csv  qa.json  qa_summary.jsonl
backend/chalicelib_project/static/asst/functions/: qa_summary_function.json
backend/data_projects/: Dockerfile  README.md  pyproject.toml
backend/data_projects/dagster_project/main/assets/: __init__.py
backend/data_projects/dbt_project/: .sqlfluff  dbt_project.yml  profiles.yml
backend/data_projects/dbt_project/macros/: get_custom_schema.sql
backend/data_projects/dbt_project/macros/db/: create_if_not_exists.sql
backend/data_projects/dbt_project/macros/utils/: macro.md  macro.yml  simple_cte.sql
backend/data_projects/dbt_project/models/staging/kangxi/: stg_hanzis.yml
backend/data_projects/dbt_project/models/staging/openai/: stg_faqs.sql
backend/data_projects/dbt_project/models/staging/public/: sources.yml  stg_raw_orders.sql  user.sql  user.yml
backend/data_projects/dbt_project/models/staging/qa/: stg_faqs.yml
backend/data_projects/dbt_project/seeds/kangxi/: raw_hanzis.yml
backend/data_projects/dbt_project/seeds/openai/: raw_faqs.yml
backend/data_projects/dbt_project/seeds/profile/: raw_blogs.csv  raw_blogs.yml  raw_users.csv  raw_users.yml
backend/data_projects/dbt_project/seeds/public/: raw_users.csv
backend/data_projects/dbt_project/seeds/qa/: raw_faqs.csv  raw_faqs.yml
backend/fastapi-project/: .dockerignore  .gitignore  Dockerfile  gunicorn.conf  pyproject.toml
backend/fastapi-project/app/: main.py  models.py  routes.py
backend/fastapi-project/app/api/: hanzi.py  weather.py
backend/fastapi-project/app/core/: config.py  logger.py
backend/fastapi-project/app/db/: base.py  crud.py
backend/fastapi-project/app/scheduler/weather/: __init__.py  core.py  data.py  helper.py  utils.py
backend/fastapi-project/app/schemas/: __init__.py  auth.py  blog.py  hanzi.py  user.py  weather.py
backend/fastapi-project/app/services/: oauth_client.py
backend/fastapi-project/app/templates/email/: invitation.html
backend/fastapi-project/app/tests/api/api_v1/: test_faqs.py
backend/fastapi-project/app/tests/crud/: test_faq.py
backend/fastapi-project/app/utils/: rwmodel.py
backend/fastapi-project/config/: gunicorn.conf  gunicorn_local.conf  gunicorn_prod.conf  logging.ini  logging_local.ini  supervisord.conf  supervisord.prod.conf  supervisord_local.conf  supervisord_prod.conf
backend/fastapi-project/scripts/: start-local.sh  start-prod.sh
backend/fastapi_project/: .env  .gitignore  Dockerfile  Dockerfile.prod  backend.dockerfile  celeryworker.dockerfile  fastbackend.dockerfile  logging_prod.ini  main.py  prestart.sh  pyproject.toml  worker-start.sh
backend/fastapi_project/alembic/: env.py
backend/fastapi_project/alembic/versions/: e2412789c190_initialize_models.py
backend/fastapi_project/app/: main.py  models.py  route.py  routes.py
backend/fastapi_project/app/api/: blog.py  faq.py  hanzi.py  invitation.py  login.py  user.py
backend/fastapi_project/app/api/api_v1/: api.py
backend/fastapi_project/app/core/: config.py
backend/fastapi_project/app/crud/: __init__.py  crud_faq.py  crud_hanzi.py
backend/fastapi_project/app/db/: base.py  base_class.py  crud.py
backend/fastapi_project/app/models/: __init__.py  faq.py  msg.py  token.py  user.py
backend/fastapi_project/app/schemas/: __init__.py  base.py  blog.py  faq.py  hanzi.py  invitation.py  item.py  user.py
backend/fastapi_project/app/services/: auth.py  deps.py  mail.py  oauth2.py  token.py
backend/fastapi_project/app/tests/: conftest.py
backend/fastapi_project/app/tests/crud/: test_faq.py  test_item.py
backend/fastapi_project/app/tests/utils/: faq.py  item.py  user.py
backend/fastapi_project/app/utils/: invitation.py  rwmodel.py  security.py
backend/fastapi_project/gunicorn/: gunicorn_conf.py
backend/fastapi_project/migrations/: env.py
backend/fastapi_project/migrations/versions/: e2412789c190_initialize_models.py
backend/fastapi_project/requirements/: base.txt  dev.txt
backend/fastapi_project/scheduler/: invitation.py
backend/fastapi_project/scripts/: start-local.sh  start-prod.sh
(+665 files in other folders)
