[tool.poetry]
name = "chalicelib_project"
version = "0.1.0"
description = ""
authors = ["Admin <admin@example.com>"]

[tool.black]
line-length = 120
target-version = ['py39']

[tool.pyright]
include = ["app.py", "chalicelib"]
exclude = ["**/__pycache__"]
venv = "venv39"
pythonVersion = "3.9"
reportUnusedImport = "warning"
