[tool.poetry]
name = "data_projects"
version = "0.0.1"
description = ""
authors = ["CODZR <975336710@qq.com>"]
readme = "README.md"
packages = [{include = "dagster_project"}]

[[tool.poetry.source]]
name = "ali"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"


[tool.poetry.dependencies]
python = "~3.11.7"
dbt-core = "~1.7.7"
dbt-postgres = "~1.7.7"
dagster = "~1.6.3"
Jinja2 = "~3.1.3"
numpy = "~1.26.4"
scipy = "~1.12.0"
dagster-dbt = "~0.22.3"
python-dotenv = "~1.0.1"

[tool.poetry.group.dev.dependencies]
dagit = "~1.6.3"
pre-commit = "~3.4.0"
dbt = "~1.0.0.35.25"
names = "~0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
