[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.24.0.post1"
fastapi = "^0.104.1"
python-multipart = "^0.0.6"
passlib = {extras = ["bcrypt"], version = "^1.6.5"}
pydantic = "^2.5.3"
gunicorn = "^21.2.0"
jinja2 = "^3.1.2"
psycopg2 = "^2.9.9"
casbin = "^1.36.0"
casbin-sqlalchemy-adapter = "^0.5.2"
apscheduler = "^3.10.4"
itsdangerous = "^2.1.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.0"
black = "^23.11.0"
isort = "^5.12.0"
autoflake = "^2.2.1"
flake8 = "^6.1.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
python-dotenv = "^1.0.1"


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
